# ai-sentinel-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
ai_sentinel/: __init__.py  client.py  config.py  events.py  exceptions.py  logging_config.py  sender.py  session.py  utils.py
ai_sentinel/adapters/: __init__.py
ai_sentinel/instrumentation/: __init__.py  decorators.py  session.py  trace.py
ai_sentinel/pipeline/: __init__.py  pipeline.py
ai_sentinel/processors/: __init__.py  base.py  enrichment.py
ai_sentinel/validators/: __init__.py  base.py  capture.py
examples/: basic_usage.py
tests/: __init__.py  test_client.py  test_instrumentation.py  test_pipeline.py  test_processors.py  test_validators.py
