[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-sentinel"
version = "0.0.2"
description = "AI Sentinel SDK - AI Security & Evaluation Platform for AI Agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Muhammad Subhan Ali" },
]
keywords = ["ai", "security", "agents", "evaluation", "sdk"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.urls]
Homepage = "https://github.com/your-org/ai-sentinel-sdk"
Documentation = "https://github.com/your-org/ai-sentinel-sdk#readme"
Repository = "https://github.com/your-org/ai-sentinel-sdk"
Issues = "https://github.com/your-org/ai-sentinel-sdk/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_sentinel*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.package-data]
ai_sentinel = ["py.typed"]
